// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
  
}

model User {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  name      String  
  isAdmin   Boolean  @default(false)
  device    Device?  @relation(fields: [deviceId], references: [id])
  deviceId  String?   @unique @db.ObjectId
}

model Device {
  id            String   @id @default(auto()) @map("_id") @db.ObjectId
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  serialNumber  String   @unique 
  user          User?
  measurements  Measurement[]
}


model MeasurementType {
  id            String   @id @default(auto()) @map("_id") @db.ObjectId
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  name          String   @unique
  metric        String
  measurements  Measurement[]  
}

model Measurement {
  id                String           @id @default(auto()) @map("_id") @db.ObjectId
  createdAt         DateTime         @default(now())
  updatedAt         DateTime         @updatedAt
  device            Device           @relation(fields: [deviceId], references: [id])
  deviceId          String           @db.ObjectId
  measurementType   MeasurementType  @relation(fields: [typeId], references: [id])
  typeId            String           @db.ObjectId
  lat               String
  long              String
  value             String?  
}


